--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1308,6 +1308,20 @@ hr.latest_separator {
 		width: 60%;
 	}
 
+	
+
+	.cart_details ul li h6 {
+		font-size: 9px;
+	}
+
+	.cart_details a{
+		padding: 5px 15px;
+	}
+
+	.cart_details .fab.fa-cc-visa, .fab.fa-cc-mastercard, .fab.fa-cc-paypal {
+		font-size: 12px;
+	}
+
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1366px) {
