coverting my php pages to react

--- a/public/src/App.css
+++ b/public/src/App.css
@@ -90,7 +90,7 @@
     padding-right: 3px;
   }
   
-  .navbar a.nav-link i.fa.fa-sign-in-alt {
+  .navbar a.nav-link i.fa.fa-sign-in{
     color: #000 !important;
     font-size: 20px;
   }
