coverting my php pages to react

--- a/public/src/assets/css/_variables.scss
+++ b/public/src/assets/css/_variables.scss
@@ -1,5 +1,6 @@
 // Variables
 $primary-color : #ed017f;
+$primary-text-color : #8b054d;
 $secondary-color : #33b27b;
 $tertiary-white : #fff;
 $tertiary-black : #000;
