--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,17 +4,18 @@
 *@project eshop
 *
 **/
-.page_setup, .success, .checkout, .account, .auth, .cart_empty, .cart, .contact, .blog_single, .blog, .about, .recommended, .single_product {
+.page_setup, .single_product, .recommended, .about, .blog, .blog_single, .contact, .cart, .cart_empty, .auth, .account, .checkout, .success {
   width: 100%;
   background-color: #f5f5f5;
   padding: 20px;
 }
 
-.page_container_setup, .success .success_container, .checkout .checkout_container, .account .account_container, .auth .auth_container, .cart_empty .cart_container_empty, .cart .cart_container, .contact .contact_container, .blog_single .blog_single_container, .blog .blog_container, .about .about_container, .single_product .single_product_container {
+.page_container_setup, .single_product .single_product_container, .about .about_container, .blog .blog_container, .blog_single .blog_single_container, .contact .contact_container, .cart .cart_container, .cart_empty .cart_container_empty, .auth .auth_container, .account .account_container, .checkout .checkout_container, .success .success_container {
   width: 95%;
   margin: 0px auto;
   padding: 20px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background-color: #fff;
 }
 
@@ -29,7 +30,8 @@
 }
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html, body {
@@ -44,7 +46,6 @@ body a {
 
 body a:hover {
   -webkit-transition: 0.3s all;
-  -moz-transition: 0.3s all;
   transition: 0.3s all;
   text-decoration: none;
 }
@@ -70,7 +71,8 @@ ul {
 }
 
 .navbar {
-  box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
+          box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 .navbar .nav-item {
@@ -121,8 +123,10 @@ ul {
   color: #fff;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
-  box-sizing: border-box;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .text-content h1 {
@@ -177,20 +181,25 @@ ul {
 
 .card {
   margin-bottom: 10px;
-  object-fit: cover;
-  box-sizing: border-box;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   cursor: pointer;
 }
 
 .card:hover {
-  box-shadow: -1px 3px 5px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: -1px 3px 5px rgba(0, 0, 0, 0.5);
+          box-shadow: -1px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
 .card img {
   width: 100%;
   height: 220px;
-  object-fit: cover;
-  object-position: 50% 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
 }
 
 .card .card-body {
@@ -277,7 +286,8 @@ hr.latest_separator {
   background-color: #1c1d1f;
   color: #fff;
   padding: 9px 0px 0px 15px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .newsletter .newsletter_container {
@@ -291,7 +301,8 @@ hr.latest_separator {
   border-radius: 5px 0px 0px 5px;
   padding: 8px 0px 8px 8px;
   margin-top: 15px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin-left: 80px;
 }
 
@@ -409,7 +420,8 @@ hr.latest_separator {
 .slider {
   -webkit-appearance: none;
   /* Override default CSS styles */
-  appearance: none;
+  -moz-appearance: none;
+       appearance: none;
   width: 100%;
   /* Full-width */
   height: 5px;
@@ -420,9 +432,10 @@ hr.latest_separator {
   /* Remove outline */
   opacity: 0.7;
   /* Set transparency (for mouse-over effects on hover) */
-  -webkit-transition: 0.2s;
+  -webkit-transition: .2s;
   /* 0.2 seconds transition on hover */
-  transition: opacity 0.2s;
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s;
 }
 
 /* Mouse-over effects */
@@ -463,11 +476,13 @@ hr.latest_separator {
 }
 
 .custom-checkbox .custom-control-input:checked:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 255, 0, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 255, 0, 0.25);
+          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 255, 0, 0.25);
 }
 
 .custom-checkbox .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 0, 0, 0.25);
 }
 
 .custom-checkbox .custom-control-input:active ~ .custom-control-label::before {
@@ -484,14 +499,17 @@ hr.latest_separator {
 
 .products .card img {
   height: 250px;
-  object-fit: cover;
-  object-position: 50% 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
 }
 
 /** single product **/
 .flexslider_container {
   padding: 10px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .flexslider .slides img {
@@ -503,12 +521,14 @@ hr.latest_separator {
 .flex_main .slides img {
   width: 100%;
   height: 400px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .product_description {
   padding: 10px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .product_description ul {
@@ -575,7 +595,8 @@ hr.latest_separator {
 .single_product_extras {
   width: 100%;
   background: #f5f5f5;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 10px;
 }
 
@@ -584,7 +605,8 @@ hr.latest_separator {
   margin: 0px auto;
   background-color: #fff;
   padding: 10px 4px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .tab-content .container {
@@ -641,7 +663,8 @@ hr.latest_separator {
 /** blog single **/
 .blog_single_card img {
   height: 500px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .blog_single_card p {
@@ -651,7 +674,8 @@ hr.latest_separator {
 }
 
 .blog_single_card {
-  box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
+          box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 .blog_single_card .blog_text {
@@ -702,13 +726,15 @@ hr.latest_separator {
 }
 
 .contact a.submit:hover {
-  box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
+          box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 .contact .contact_information .col-md-4 {
   padding: 20px 0px 0px 10px;
   text-align: center;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .contact .contact_information .fa.fa-map-marker, .fa.fa-mobile, .fa.fa-envelope {
@@ -741,7 +767,8 @@ hr.latest_separator {
   border: 1px solid #33b27b;
   padding: 10px;
   border-radius: 5px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .cart_details ul {
@@ -785,8 +812,10 @@ hr.latest_separator {
   left: 50%;
   top: 45%;
   text-align: center;
-  transform: translate(-50%, -50%);
-  box-sizing: border-box;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border: 1px solid #33b27b;
   padding: 20px;
   border-radius: 5px;
@@ -828,7 +857,8 @@ hr.latest_separator {
   width: 90%;
   margin: 10px auto;
   border-radius: 5px;
-  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.25);
+          box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .account img.profile_pic {
@@ -838,14 +868,18 @@ hr.latest_separator {
   border-radius: 2px;
   left: 40%;
   top: 5%;
-  object-fit: cover;
-  justify-content: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .account ul li {
   display: block;
   padding: 10px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   cursor: pointer;
 }
 
@@ -905,7 +939,8 @@ hr.latest_separator {
   border: 1px solid #33b27b;
   padding: 10px;
   border-radius: 5px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .checkout_details ul {
@@ -941,11 +976,13 @@ hr.latest_separator {
 .success .success_info {
   border: 1px solid #33b27b;
   padding: 20px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   position: relative;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 40%;
   border-radius: 5px;
   text-align: center;
@@ -974,136 +1011,119 @@ hr.latest_separator {
     letter-spacing: 1px;
     margin-bottom: 15px;
   }
-
   .text-content .shop-btn {
     padding: 9px 15px;
     font-size: 12px;
   }
-
   .newsletter input[type=text] {
     width: 170px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
-
   .service-grid {
     margin-bottom: 10px;
   }
-
   .card img {
     height: auto;
   }
-
   .nav-item .nav-link {
     font-size: 10px;
   }
-
   .newsletter input[type=text] {
     width: 190px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
-
   .contact .form_container {
     width: 95%;
     margin: 20px auto;
   }
-
   .recommended .recommend {
     width: 200px;
     margin: auto;
     height: auto;
   }
-
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
-
   .success .success_info {
     width: 90%;
   }
 }
+
 @media screen and (min-width: 360px) and (max-width: 640px) {
   .newsletter input[type=text] {
     width: 230px;
     margin-left: -5px;
     margin-bottom: 10px;
   }
-
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
-
   .success .success_info {
     width: 90%;
   }
-
   .products .card img {
     height: auto;
   }
 }
+
 @media screen and (min-width: 375px) and (max-width: 667px) {
   .newsletter input[type=text] {
     width: 245px;
     margin-left: -5px;
     margin-bottom: 10px;
   }
-
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
-
   .success .success_info {
     width: 90%;
   }
-
   .products .card img {
     height: auto;
   }
 }
+
 @media screen and (min-width: 411px) and (max-width: 731px) {
   .newsletter input[type=text] {
     width: 275px;
     margin-left: -5px;
     margin-bottom: 10px;
   }
-
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
-
   .success .success_info {
     width: 90%;
   }
-
   .products .card img {
     height: auto;
   }
 }
+
 @media screen and (min-width: 412px) and (max-width: 732px) {
   .newsletter input[type=text] {
     width: 275px;
     margin-left: -5px;
     margin-bottom: 10px;
   }
-
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
-
   .success .success_info {
     width: 90%;
   }
-
   .products .card img {
     height: auto !important;
   }
 }
+
 @media screen and (min-width: 569px) and (max-width: 731px) {
   .text-content h1 {
     font-size: 18px;
@@ -1111,73 +1131,62 @@ hr.latest_separator {
     letter-spacing: 1px;
     margin-bottom: 15px;
   }
-
   .text-content .shop-btn {
     padding: 10px 25px;
   }
-
   .card {
     margin-bottom: 9px;
   }
-
   .newsletter input[type=text] {
     width: 200px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
-
   .service-grid {
     margin-bottom: 10px;
   }
-
   .card-body a {
     padding: 10px 15px;
   }
-
   .card img {
     height: auto;
   }
-
   .contact .form_container {
     width: 95%;
     margin: 20px auto;
   }
-
   .recommended .recommend {
     width: 175px;
     margin: auto;
     height: auto;
   }
-
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
-
   .products .card img {
     height: auto;
   }
 }
+
 @media screen and (min-width: 600px) and (max-width: 960px) {
   .newsletter input[type=text] {
     width: 450px;
     margin-left: -5px;
     margin-bottom: 10px;
   }
-
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
-
   .success .success_info {
     width: 60%;
   }
-
   .products .card img {
     height: auto;
   }
 }
+
 @media screen and (min-width: 732px) and (max-width: 767px) {
   .text-content h1 {
     font-size: 18px;
@@ -1185,43 +1194,36 @@ hr.latest_separator {
     letter-spacing: 1px;
     margin-bottom: 15px;
   }
-
   .text-content .shop-btn {
     padding: 10px 25px;
   }
-
   .newsletter input[type=text] {
     width: 250px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
-
   .service-grid {
     margin-bottom: 10px;
   }
-
   .card-body a {
     padding: 10px 15px;
   }
-
   .card img {
     height: auto;
   }
-
   .contact .form_container {
     width: 95%;
     margin: 20px auto;
   }
-
   .success .success_info {
     width: 60%;
   }
-
   .products .card .card-body {
     padding: 0;
     font-size: 8px;
   }
 }
+
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .text-content h1 {
     font-size: 18px;
@@ -1229,73 +1231,62 @@ hr.latest_separator {
     letter-spacing: 1px;
     margin-bottom: 15px;
   }
-
   .text-content .shop-btn {
     padding: 10px 25px;
   }
-
   .newsletter input[type=text] {
     width: 230px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
-
   .card-body a {
     padding: 0px 0px;
     font-size: 8px;
     color: #fff;
     text-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
   }
-
   .service-grid {
     margin-bottom: 10px;
   }
-
   .card img {
     width: 100%;
   }
-
   .contact .form_container {
     width: 80%;
     margin: 20px auto;
   }
-
   .success .success_info {
     width: 60%;
   }
-
   .cart_details ul li h6 {
     font-size: 9px;
   }
-
   .cart_details a {
     padding: 5px 15px;
   }
-
   .cart_details .fab.fa-cc-visa, .fab.fa-cc-mastercard, .fab.fa-cc-paypal {
     font-size: 12px;
   }
-
   .products .card .card-body {
     padding: 2px;
     font-size: 8px;
   }
 }
+
 @media screen and (min-width: 1024px) and (max-width: 1366px) {
   .newsletter input[type=text] {
     width: 350px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
-
   .text-content h1 {
     font-size: 40px;
   }
-
   .success .success_info {
     width: 50%;
   }
 }
+
 @media screen and (min-width: 1366px) {
   .newsletter input[type=text] {
     width: 500px;
@@ -1303,5 +1294,4 @@ hr.latest_separator {
     margin-bottom: 5px;
   }
 }
-
 /*# sourceMappingURL=style.css.map */
